Fixing checkbox and label alignment in the view for quiz attempts

--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -74,3 +74,8 @@ ul.quiz-answers {
 .quiz-question-score {
   margin-top: 30px;
 }
+
+.quiz-attempt input{
+  float: left;
+  margin-right: 10px;
+}
